Paul Eggert.
52). Fix for parsing HP specific printer definitions in make_printerdef.
53). Fix for smbclient doing an 'ls' on large directories from OS/2 servers
from Christoph Pfisterer.
54). Fix for WINS server code where "do you still want name?" request was
being sent to the wrong IP address.
55). Fixed "recursion desired" bits set in nmbd so we are identical to
Windows NT.

Older release notes for Samba 2.0.x follow.

Previous Release notes for 2.0.6
---------------------------------

New/Changed parameters in 2.0.6
-------------------------------

There are 6 new parameters in the smb.conf file.

wins hook

This parameter allows an external program to be called
on all changes to a Samba WINS database, allowing dynamic
DNS updates.

debug hires timestamp
debug pid
debug uid

The above 3 parameters provide greater debug information.

preexec close
rootpreexec close

The above 2 parameters control the action taken on the
success or failure of a 'preexec' script.

There is also one removed parameter.

mangle locks

The addition of these new parameters and the removal of the old
is described in more detail in the smb.conf man page,

When using "security=domain" the "password server"
parameter can now be set to the string "*', which will
cause Samba to search for Domain controllers in the
same way that Windows NT does. See the smb.conf man
page for more details.

The "interfaces" parameter in smb.conf can now be dynamically
detected on startup and can also now take an interface name
such as eth0. See the smb.conf man page for the details
on the new features of the "interfaces" parameter.
nmbd has been enhanced to use this feature.

The syntax for the Linux-specific smbmount command has been changed
and is now compatible with the standard mount command. See the modified
smbmount man page for details.

Support for the UNIX CUPS printer standard has been added.
See www.cups.org for details. Thanks to the folks at Easy Software